--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,29 @@
+#db info
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/userservices
+#spring.datasource.username=root
+#spring.datasource.password=srinivasH53@
+
+#eureka
+# Enable fetching registry
+#eureka.client.fetch-registry=true
+#eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#eureka.client.register-with-eureka=true
+# Helpful for debugging
+#eureka.client.healthcheck.enabled=true
+#logging.level.com.netflix.eureka=DEBUG
+#logging.level.com.netflix.discovery=DEBUG
+
+#eureka
+# Enable fetching registry
+eureka.client.fetch-registry=true
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+spring.cloud.gateway.discovery.locator.enabled=true
+eureka.client.register-with-eureka=true
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+# Helpful for debugging
+eureka.client.healthcheck.enabled=true
+logging.level.com.netflix.eureka=DEBUG
+logging.level.com.netflix.discovery=DEBUG
+
 
